packages/dashboard-frontend/src/components/DevfileViewer/index.module.css
/*
 * Copyright (c) 2018-2026 Red Hat, Inc.
 * This program and the accompanying materials are made
 * available under the terms of the Eclipse Public License 2.0
 * which is available at https://www.eclipse.org/legal/epl-2.0/
 *
 * SPDX-License-Identifier: EPL-2.0
 *
 * Contributors:
 *   Red Hat, Inc. - initial API and implementation
 */

.devfileViewer {
  height: 50vh;
}

.devfileViewer > div {
  height: inherit;
}

.devfileViewer > div > div {
  overflow: auto;
  height: 100%;
  border: 1px solid var(--pf-t--global--border--color--default);
}

.devfileViewer > div > div > div > div {
  opacity: 0.8;
}

